--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tarojs/taro": "^1.0.1",
     "@tarojs/taro-h5": "^1.0.1",
     "@tarojs/taro-weapp": "^1.0.1",
+    "axios": "^0.18.0",
     "nervjs": "^1.3.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
